# music

./: .gitattributes  .gitignore  COPYING  Makefile  Makefile.am  Makefile.in  configure.ac  gitconfig  list-best-tracks.sh  make-compressed-cd.sh  ratings-condorcet-dot.pl  ratings-sorter.mpv-input.conf  ratings-sorter.sh  ratings.txt  replaygain.sh  setup-filters.sh
fixes/: IvyAudio-PianoIn162-Ambient-VolumeFix.sfz  IvyAudio-PianoIn162-Close-VolumeFix.sfz
instruments/: kontakt5-pianobello.lmms  mdaPiano.lmms
rondo1/: rondo1.ly.diff  rondo1.ly.orig  rondo1.mid  rondo1.rg  rondo1.txt
sonata1/: sonata1-format0.mid  sonata1-ramp.rg  sonata1.ly.diff  sonata1.ly.orig  sonata1.mid  sonata1.mmp  sonata1.rg
sonata2/: sonata2-format0.mid  sonata2-ramp.rg  sonata2.ly.orig  sonata2.mid  sonata2.mmp  sonata2.rg
sonata3/: sonata3-format0.mid  sonata3-ramp.rg  sonata3.ly.orig  sonata3.mid  sonata3.mmp  sonata3.rg
sonata4/: sonata4-format0.mid  sonata4-ramp.rg  sonata4.ly.orig  sonata4.mid  sonata4.mmp  sonata4.rg
sonata5/: sonata5-format0.mid  sonata5-ramp.rg  sonata5.mid  sonata5.mmp  sonata5.rg
sonatina10/: sonatina10.ly.diff  sonatina10.ly.orig  sonatina10.mid  sonatina10.rg  sonatina10.txt
sonatina2/: sonatina2.ly.diff  sonatina2.rg
sonatina3/: sonatina3.ly.diff  sonatina3.txt
sonatina4/: sonatina4.ly.diff  sonatina4.rg
sonatina5/: sonatina5.ly.diff  sonatina5.ly.orig
sonatina6/: sonatina6.ly.diff  sonatina6.ly.orig  sonatina6.mid  sonatina6.rg
sonatina7/: sonatina7.ly.diff  sonatina7.ly.orig  sonatina7.mid  sonatina7.rg
sonatina8/: sonatina8.ly.diff  sonatina8.ly.orig  sonatina8.mid  sonatina8.rg  sonatina8.txt
sonatina9/: sonatina9.ly.diff  sonatina9.ly.orig  sonatina9.mid  sonatina9.rg
support/Ivy_Audio_-_Piano_in_162_sfz/: IvyAudio-PianoIn162-Ambient-VolumeFix.sfz  IvyAudio-PianoIn162-Close-VolumeFix.sfz
